syntax = "proto3";

package mutualexclusion;

option go_package = "github.com/Gustav2620/Ricart-Argawala/proto;mutualexclusion";

service MutualExclusion {
  rpc RequestEntry (RequestMsg) returns (ReplyMsg);
}

message RequestMsg {
  int32 node_id = 1;
  int64 timestamp = 2;
  int32 port = 3;
}

message ReplyMsg {
  bool granted = 1;
}